src/test/ui/issue-39388.stderr
error: expected `*` or `+`
  --> $DIR/issue-39388.rs:14:22
   |
LL |     (($($a:tt)*) = ($($b:tt))*) => { //~ ERROR expected `*` or `+`
   |                      ^^^^^^^

error: aborting due to previous error

